working on admin panel

--- a/templates/entree/create.html
+++ b/templates/entree/create.html
@@ -1,24 +1,34 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
-{% block header %}
-  <h1>{% block title %}New Entree{% endblock %}</h1>
-{% endblock %}
+
+{% block header %}<h1>{% block title %}New Entree{% endblock %}</h1>{% endblock %}
 
 {% block content %}
-  <form method="post">
-    <label for="name">Name</label>
-    <input name="name" id="name" value="{{ request.form['name'] }}" required>
-    <div id="wines-container">
-      <label for="wines">Wine Pairing</label>
-      <input name="wines" id="wines" />
-      <button onclick="addWine()">Add Wine</button><br />
-    </div>
-    <div id="allergens-container">
-      <label for="allergens">Allergen</label>
-      <input name="allergens" id="allergens" />
-      <button onclick="addAllergen()">Add Allergen</button><br />
-    </div>
-    <input type="submit" value="Save">
-  </form>
-  <script src="{{ url_for('static', filename='entree.js') }}"></script>
+  <div class="entree-form">
+    <form method="post">
+      <div class="input-line">
+        <label for="name">Name</label>
+        <input name="name" id="name" value="{{ request.form['name'] }}" required>
+      </div>
+      <div id="wines-container">
+        <div class="input-line">
+          <label for="wines">Wine Pairing</label>
+          <div>
+            <input name="wines" id="wines" />
+            <button onclick="addWine()">+</button><br />
+          </div>
+        </div>
+      </div>
+      <div id="allergens-container">
+        <div class="input-line">
+          <label for="allergens">Allergen</label>
+          <div>
+            <input name="allergens" id="allergens" />
+            <button onclick="addAllergen()">+</button><br />
+          </div>
+        </div>
+      </div>
+      <input type="submit" value="Save" class="btn btn-primary">
+    </form>
+  </div>
 {% endblock %}
