moved database config into environment variables

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <h1>Flask Restaurant</h1>
 <p>Welcome to Flask Restaurant!</p>
-<p>This app is divided into two sections...and admin panel and an API.</p>
+<p>This app is divided into two sections...an admin panel and an API.</p>
 <h4><a href="/admin">Admin Panel</a></h4>
 <p>The admin panel is built with Flask and Jinja Templates.  The purpose of this section of the app is to provide a user-friendly interface to interact with the app's database.  Users can easily add or edit entrees using the admin panel.  These entrees are then available through the API to other applications</p>
 <h4><a href="/api/entrees">API</a></h4>
